# simple-crud

./: .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: fruits.rs  lib.rs  suppliers.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/db/: mod.rs
src/db/fruits_table/: fruits.rs  mod.rs
src/db/suppliers_table/: prelude.rs  suppliers.rs
src/fruits_table/: fruits.rs  prelude.rs
src/suppliers_table/: mod.rs  prelude.rs  suppliers.rs
