[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
async-std = { version = "1.10.0", features = ["attributes"] }
sea-orm = { version = "0.6.0", features = ["runtime-async-std-rustls", "sqlx-mysql", "macros"], default-features = false }
