[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
dotenv = "0.15"
anyhow = "1.0.55"
async-std = { version = "1.10.0", features = ["attributes"] }
chrono = "0.4.19"
sea-orm = { version = "0.6.0", features = ["runtime-actix-native-tls", "sqlx-mysql", "macros", "with-chrono"], default-features = false }
actix-web = "4"
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.79"
